--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Water Puzzle</title>
     <link rel="stylesheet" href="style.css">
-    <script src="waterpuzzle.js"></script>
 </head>
-<body> 
+<body>
     <h1>2025 Water Puzzle Game</h1>
-    <div id="game-info" class="game-area">
-        <p>關卡：<span id=level-count>1</span></p>
+    <div id="game-info">
         <p>移動次數：</p>
     </div>
-    <div id="controls" class="game-area">
+    <div id="controls">
         <label for="level-select">選擇關卡</label>
         <select id="level-select">
             <option value="1">Level 1</option>
@@ -28,10 +25,6 @@
             <option value="9">Level 9</option>
             <option value="10">Level 10</option>
         </select>
-        <button id ="play-button">PLAY</button>
-    </div>
-    <div id="game-container" class="game-area">
-
     </div>
 </body>
 </html>
